# OrthoSfM

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
resources/: Cube.ply  Sphere.ply  Suzanne.ply
src/algorithms/: CMakeLists.txt  ReconstructionAlgorithm.cpp  ReconstructionAlgorithm.h  tomasi_kanade.cpp  tomasi_kanade.h
src/algorithms/orthographic/: CMakeLists.txt  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicReconstructionAlgorithm.cpp  OrthographicReconstructionAlgorithm.h  OrthographicReprojectionError.h
src/algorithms/orthographic_quaternion/: CMakeLists.txt  OrthoQuaternionCamera.cpp  OrthoQuaternionCamera.h  OrthoQuaternionRecoAlgorithm.cpp  OrthoQuaternionRecoAlgorithm.h  OrthographicQuaternionReprojectorError.h
src/app/: CMakeLists.txt  main.cpp
src/bundle_adjustment/: CMakeLists.txt  bundle_adjustment.cpp  bundle_adjustment.h
src/cuda_sift/: CMakeLists.txt  CMakeLists.txt.nope  cudaSift.h  cudaSiftH.cu  mainSift.cpp
src/data_structures/: CMakeLists.txt  Camera.cpp  Camera.h  camera_io.cpp  camera_io.h  colored_point_cloud.h  group.cpp  group.h  project_io.cpp  project_io.h  solver_type.h  track.cpp  track.h  view.cpp  view.h
src/matching/: CMakeLists.txt  matching.cpp  matching.h  matching_io.cpp  matching_io.h  matching_mve.cpp  matching_mve.h
src/mve/: CMakeLists.txt
src/mve/math/: accum.h  algo.h  bezier_curve.h  bspline.h  functions.h  geometry.h  line.h  matrix.h  matrix_qr.h  matrix_svd.h  matrix_tools.h  octree_tools.h  permute.h  plane.h  quaternion.h  transform.h  vector.h
src/mve/mve/: CMakeLists.txt  bundle.cc  bundle.h  bundle_io.cc  bundle_io.h  camera.cc  camera.h  depthmap.cc  depthmap.h  image.h  image_base.h  image_color.h  image_drawing.h  image_exif.cc  image_exif.h  image_io.cc  image_io.h  image_tools.cc  image_tools.h  marching.cc  marching_cubes.h  marching_tets.h  mesh.cc  mesh.h  mesh_info.cc  mesh_info.h  mesh_io.cc  mesh_io.h  mesh_io_npts.cc  mesh_io_npts.h  mesh_io_obj.cc  mesh_io_obj.h  mesh_io_off.cc  mesh_io_off.h  mesh_io_pbrt.cc  mesh_io_pbrt.h  mesh_io_ply.cc  mesh_io_ply.h  mesh_io_smf.cc  mesh_io_smf.h  (+8 more)
src/mve/sfm/: _test_bundle_adjustment.cc  _test_camera_db.cc  _test_features.cc  _test_homography.cc  _test_matching.cc  ba_cholesky.h  ba_conjugate_gradient.h  ba_dense_vector.h  ba_linear_solver.cc  ba_linear_solver.h  ba_sparse_matrix.h  ba_types.h  bundle_adjustment.cc  bundle_adjustment.h  bundler_common.cc  bundler_common.h  bundler_features.cc  bundler_features.h  bundler_incremental.cc  bundler_incremental.h  bundler_init_pair.cc  bundler_init_pair.h  bundler_intrinsics.cc  bundler_intrinsics.h  bundler_matching.cc  bundler_matching.h  bundler_tracks.cc  bundler_tracks.h  camera_database.h  camera_pose.h  cascade_hashing.cc  cascade_hashing.h  correspondence.h  exhaustive_matching.cc  exhaustive_matching.h  extract_focal_length.cc  extract_focal_length.h  feature_set.cc  feature_set.h  fundamental.cc  (+26 more)
src/mve/util/: aligned_allocator.h  aligned_memory.h  arguments.cc  arguments.h  exception.h  file_system.cc  file_system.h  frame_timer.h  ini_parser.cc  ini_parser.h  logging.h  strings.h  system.cc  system.h  timer.h  tokenizer.h
src/sfm/: CMakeLists.txt  reconstruct.cpp  reconstruct.h
src/testbench/: CMakeLists.txt  dataset_generation.cpp  dataset_generation.h  full_pipeline_tests.cpp  full_pipeline_tests.h  synthethic_tests.cpp  synthethic_tests.h  testbench.cpp
src/triangulation/: CMakeLists.txt  outlier_filtering.cpp  outlier_filtering.h  triangulation.cpp  triangulation.h
src/util/: CMakeLists.txt  common.cpp  common.h  timing.cpp  timing.h
